# FrozPass

./: README.md
vault-backend/: .gitignore  Cargo.toml  Dockerfile
vault-backend/src/: auth.rs  auth_admin.rs  crypto.rs  db.rs  delete_user.rs  handlers.rs  handlers_admin.rs  main.rs  models.rs
vault-backend/src/middleware_mod/: auth_middleware.rs  auth_middleware_admin.rs  mod.rs
vault-backend/vault-backend-docker/: Dockerfile
vault-frontend/: nginx.conf  package.json
vault-frontend/src/: AdminDashboard.jsx  App.css  App.jsx  Dashboard.jsx  LoginAdminPage.jsx  LoginPage.jsx  RegisterPage.jsx  index.css
vault-frontend/vault-front-docker/: Dockerfile  nginx.conf
vault-helm/: Chart.yaml  values.yaml
vault-helm/templates/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml
