[package]
name = "vault-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
bcrypt = "0.15"
jsonwebtoken = "9"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
futures-util = "0.3"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
rand = "0.8"